--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
+  name = Jeff Kight
+  email = jeff@kight.net
 [core]
   editor = vi
   excludesfile = ~/.gitignore
